--- a/package.json
+++ b/package.json
@@ -6,9 +6,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@playwright/test": "^1.51.1",
     "@types/node": "^22.14.1"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "dependencies": {
+    "fsevents": "^2.3.2",
+    "playwright": "^1.51.1",
+    "playwright-core": "^1.51.1",
+    "undici-types": "^6.21.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/deemhunzai/MyProjects.git"
+  },
+  "bugs": {
+    "url": "https://github.com/deemhunzai/MyProjects/issues"
+  },
+  "homepage": "https://github.com/deemhunzai/MyProjects#readme",
+  "description": ""
 }
